--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -23,6 +23,8 @@ services:
     cap_add:
      - NET_ADMIN
      - SYS_MODULE
+    sysctl:
+     - net.ipv6.conf.all.disable_ipv6=0
 
   
   ipv6nat:
