--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -25,6 +25,7 @@ services:
      - SYS_MODULE
     sysctl:
      - net.ipv6.conf.all.disable_ipv6=0
+     - net.ipv6.conf.all.forwarding=1
 
   
   ipv6nat:
